[gd_scene load_steps=4 format=3 uid="uid://cm2ivsqmkkqlk"]

[ext_resource type="Script" path="res://scripts/beetle_enemy.gd" id="1_stwso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55xhr"]
size = Vector2(96, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dludg"]
size = Vector2(384, 106)

[node name="BeetleEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_stwso")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_55xhr")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(1.42017, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-27.6923, -16, -33.2308, -8, -33.2308, 0, -33.2308, 8, -20.9231, 8, -20.9231, 24, -15.3846, 8, -9.84615, 24, -9.84615, 8, -4.30769, 8, -4.30769, 24, 1.23077, 8, 6.76923, 24, 6.76923, 8, 12.3077, 8, 12.3077, 24, 17.8462, 8, 23.3846, 24, 23.3846, 8, 34.3669, 8, 34.3669, -8, 22.1538, -16, 40, -40, 0, -40, -16.6154, -16)

[node name="PlatformGuideL" type="Marker2D" parent="."]
position = Vector2(-48, 8)

[node name="PlatformGuideR" type="Marker2D" parent="."]
position = Vector2(48, 8)

[node name="EntityDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityDetector"]
position = Vector2(0, -43)
shape = SubResource("RectangleShape2D_dludg")
debug_color = Color(0.805342, 0.379349, 0.459398, 0.42)

[connection signal="body_entered" from="EntityDetector" to="." method="_on_entity_detector_body_entered"]
[connection signal="body_exited" from="EntityDetector" to="." method="_on_entity_detector_body_exited"]
